# BreadFinder

./: README.md  app.py  job_emails.txt  main.py  pyproject.toml  requirements.txt  utils.py
